# hwdb

./: .gitignore  Makefile.am  configure.ac  hwdb-update.sh
hwdb/: 20-OUI.hwdb  20-pci-vendor-model.hwdb
